--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </style>
 
 <body>
+    <div id="logoDiv">
+        <img src="./images/logo.png" alt="Rocco's Taco Logo">
+    </div>
+    
     <div id="portraitContainer">
         <h1>Please Rotate Screen</h1>
         <img id="rotateScreenIcon" src="./images/rotateScreenIcon.png" alt="rotate screen icon">
