--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <p class="drink-title" id="drinkTitle"></p>
             <img id="drinkPhoto" src="" alt="current drink photo">
             <div id="recipeDiv"></div>
+            <div id="recipeInfoDiv"></div>
             <!--
             <div id="recipeDiv2"></div>
             -->
