--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 
         <div id="mainButtonContainer">
             <div class="form-container">
-                <form class="form">
-                    <input id="search" type="text" class="input" placeholder="search..."/>
-                    <!--<button id="clear" class="clear-results nav-buttons">clear</button>-->
-                </form>
+
+                    <input id="search" type="text" class="input" placeholder="search..."/>    
+
+                <button id="clearBtn" class="nav-buttons">clear</button>
             </div>
             
             <div class="results-list" id="list"></div>
