--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                     <input id="search" type="text" class="input" placeholder="search..."/>    
 
-                <button id="clearBtn" class="nav-buttons">clear</button>
+                <button id="clear" class="nav-buttons">Clear</button>
             </div>
             
             <div class="results-list" id="list"></div>
