--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="portraitButtons" onclick="window.open('https://projectdg.github.io/RTMT/', '_blank')"><span id="menuReviewButton" class="portraitButtonText">Menu Review</span></button>
             <button class="portraitButtons" onclick="window.open('https://projectdg.github.io/RTI/', '_blank')"><span id="portraitInventoryButton" class="portraitButtonText">Inventory</span></button>
             <button class="portraitButtons" onclick="window.open('https://projectdg.github.io/WS/', '_blank')"><span class="portraitButtonText">Well Stock</span></button>
-            <button class="portraitButtons" onclick="window.open('https://projectdg.github.io//', '_blank')"><span class="portraitButtonText">Section Setup</span></button>
+            <button class="portraitButtons" onclick="window.open('https://projectdg.github.io/RTSS/', '_blank')"><span class="portraitButtonText">Section Setup</span></button>
             
     </div>
 
